org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-11 (1.0.0.beta)    (Happy B-day Ini!)

	- Declaring beta status!
	- Using new logo created by Paul (thanks!).


2008-11-10 (1.0.0.alpha7)
	- Fixed 38: show the "owl" and "html" links
	  --> include hot links in the read-only view of a registered ontology
	
2008-11-09 (1.0.0.alpha7)

	- Voc2RDF functionality re-merged in this project.

	- New tooltip handling via an "?" icon.
	
	- JenaUtil2: with some of the methods in JenaUtil but with some adjustments.
	  Initially intended to handle the fragment separator, which is '#' always in
	  the original version. Currently, JenaUtil2 still uses '#' but already
	  factors out this element so it's easier to test for a different fragment
	  separator, especifically, '/'.
	  Preliminary tests, show that the Jena library handles the '/' separator
	  differently than with '#'. For example, elements in the base namaspace are
	  nicely identified with relative references when '#' is used, but not
	  with '/'.  This may be just a cosmetic difference but I haven't tested
	  this thoroughly yet (especially in terms of transferring elements from a
	  given ontology to the new to be uploaded in the repository).
	  
	- Improved handling of the "_map" suffix in the shortName.
	

2008-11-06 (0.1.alpha6)

	- OntologyPanel:  Since "load registry file" is not implemented directly,
	  I removed the related GUI elements (via a flag, so I can return to that later
	  if necessary). Note: the user would use the main front-end to choose a
	  registered ontology, and then ontmd will be called to proceed 
	  with the creation of the new version.
	
	- Passing call parameters to the initialization (getBaseInfo) to better logging
	  on the server side.
	  
	- Now handling aquaportal versions: a parameter "ontologyId", if given, will be
	  used to perform the final REST upload call, so the new version gets linked with